--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-    <header class="page-header">
+    <header data-test="header" class="page-header">
       <nav class="navigation">
         <a class="navigation-logo" href="index.html">
           <img class="page-header-logo" alt="Логотип Седона" src="#">
@@ -37,7 +37,9 @@
             </a>
           </li>
           <li class="navigation-item">
-            <button type="button">Кнопка</button>
+            <a class="navigation-link button" href="#">
+              Хочу сюда!
+            </a>
           </li>
         </ul>
       </nav>
@@ -45,43 +47,218 @@
 
     <main class="main-inner">
 
+      <section data-test="filter" class="filter">
+        <h1 class="filter-title">Гостиницы Седоны</h1>
 
-      <section class="newsletter newsletter-catalog">
-        <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
-        <p class="search-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
-          <label for="newsletter-email"></label>
-          <input class="field"  placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email" required>
-          <button class="button newsletter-button" type="submit">Подписаться</button>
+        <ul class="filter-breadcrumbs breadcrumbs-list">
+          <li class="breadcrumbs-item">
+            <a class="breadcrumbs-link" href="index.html">
+              <span class="visually-hidden">
+                На главную
+              </span>
+            </a>
+          </li>
+          <li class="breadcrumbs-item">
+            <a class="breadcrumbs-link">
+              Гостиницы
+            </a>
+          </li>
+        </ul>
+
+        <form class="filter-catalog" action="#" method="get">
+          <fieldset class="filter-infrastructure">
+            <legend class="filter-infrastructure-title">Инфраструктура:</legend>
+            <ul class="filter-infrastructure-list control-list list-reset">
+              <li class="control-item">
+                <input class="control-input" id="pool" name="pool" value="pool" type="checkbox" checked>
+                <label class="control-label" for="pool">Бассейн</label>
+              </li>
+              <li class="control-item">
+                <input class="control-input" id="parking" name="parking" value="parking" type="checkbox" checked>
+                <label class="control-label" for="parking">Парковка</label>
+              </li>
+              <li class="control-item">
+                <input class="control-input" id="wi-fi" name="wi-fi" value="wi-fi" type="checkbox">
+                <label class="control-label" for="wi-fi">Wi-Fi</label>
+              </li>
+            </ul>
+          </fieldset>
+
+          <fieldset class="filter-housing">
+            <legend class="filter-housing-title">Тип жилья:</legend>
+            <ul class="filter-housing-list control-list list-reset">
+              <li class="control-item">
+                <input class="control-input" id="hotel" name="hotel-group" type="radio" value="hotel" checked>
+                <label class="control-label" for="hotel">Гостиница</label>
+              </li>
+              <li class="control-item">
+                <input class="control-input" id="motel" name="hotel-group" type="radio" value="motel">
+                <label class="control-label" for="motel">Мотель</label>
+              </li>
+              <li class="control-item">
+                <input class="control-input" id="apartments" name="hotel-group" type="radio" value="apartments">
+                <label class="control-label" for="apartments">Апартаменты</label>
+              </li>
+            </ul>
+          </fieldset>
+
+          <fieldset class="filter-cost">
+            <legend>Стоимость, ₽:</legend>
+            <label>от<input type="text" value="0"></label>
+            <label>до<input type="text" value="9000"></label>
+            <div class="slider">
+              <input type="range" min="0" max="10000" value="10000" oninput="rangeValue.innerText = this.value">
+            </div>
+          </fieldset>
+
+          <button type="submit">Применить</button>
+          <button type="reset">Сбросить</button>
+        </form>
+      </section>
+
+
+      <section data-test="catalog" class="catalog">
+        <h2>Найдено гостиниц: <span>38</span></h2>
+
+        <select class="catalog-select" aria-label="Сортировка">
+          <option value="cheap">Сначала дешёвое</option>
+          <option value="expensive">Сначала дорогое</option>
+          <option value="popular">Сначала популярное</option>
+        </select>
+
+        <a class="button-catalog-card" href="#">
+          <span class="visually-hidden">Показать карточки</span>
+        </a>
+        <a href="#" class="button-catalog-slide">
+          <span class="visually-hidden">Показать слайдом</span>
+        </a>
+        <a href="#" class="button-catalog-list">
+          <span class="visually-hidden">Показать список</span>
+        </a>
+
+        <ul class="catalog-list">
+          <li class="catalog-card">
+            <a class="catalog-card-link" href="#" tabindex="-1">
+              <img class="catalog-card-image" src="#" alt="Amara Resort & Spa">
+              <h3 class="catalog-card-title">Amara Resort & Spa</h3>
+            </a>
+            <p>Гостиница</p>
+            <b class="catalog-card-price">От 4000 ₽</b>
+            <a class="catalog-card-button button" href="#">Подробнее</a>
+            <a class="catalog-card-button button" href="#">В избранное</a>
+            <p class="start start-4">
+              <span class="visually-hidden">Четырёхзвёздочный отель</span>
+            </p>
+            <p class="catalog-rating">Рейтинг: 5,0</p>
+          </li>
+
+          <li class="catalog-card">
+            <a class="catalog-card-link" href="#" tabindex="-1">
+              <img class="catalog-card-image" src="#" alt="Villas at Poco Diablo">
+              <h3 class="catalog-card-title">Villas at Poco Diablo</h3>
+            </a>
+            <p>Гостиница</p>
+            <b class="catalog-card-price">От 5000 ₽</b>
+            <a class="catalog-card-button button" href="#">Подробнее</a>
+            <a class="catalog-card-button button" href="#">В избранное</a>
+            <p class="start start-4">
+              <span class="visually-hidden">Четырёхзвёздочный отель</span>
+            </p>
+            <p class="catalog-rating">Рейтинг: 9,2</p>
+          </li>
+
+          <li class="catalog-card">
+            <a class="catalog-card-link" href="#" tabindex="-1">
+              <img class="catalog-card-image" src="#" alt="Desert Quail Inn">
+              <h3 class="catalog-card-title">Desert Quail Inn</h3>
+            </a>
+            <p>Гостиница</p>
+            <b class="catalog-card-price">От 2500 ₽</b>
+            <a class="catalog-card-button button" href="#">Подробнее</a>
+            <a class="catalog-card-button button" href="#">В избранное</a>
+            <p class="start start-3">
+              <span class="visually-hidden">Трёхзвёздочный отель</span>
+            </p>
+            <p class="catalog-rating">Рейтинг: 6,9</p>
+          </li>
+
+          <li class="catalog-card">
+            <a class="catalog-card-link" href="#" tabindex="-1">
+              <img class="catalog-card-image" src="#" alt="GreenTree Inn">
+              <h3 class="catalog-card-title">GreenTree Inn</h3>
+            </a>
+            <p>Гостиница</p>
+            <b class="catalog-card-price">От 1500 ₽</b>
+            <a class="catalog-card-button button" href="#">Подробнее</a>
+            <a class="catalog-card-button button" href="#">В избранное</a>
+            <p class="start start-2">
+              <span class="visually-hidden">Двухзвёздочный отель</span>
+            </p>
+            <p class="catalog-rating">Рейтинг: 5,0</p>
+          </li>
+        </ul>
+
+        <hr>
+
+        <ul class="pagination-list">
+          <li class="pagination-item">
+            <a class="pagination-link" href="#" >1</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">2</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">3</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">4</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">...</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">10</a>
+          </li>
+        </ul>
+
+      </section>
+
+
+      <section data-test="subscribe" class="subscribe subscribe-catalog">
+        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+        <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+          <label for="subscribe-email"></label>
+          <input class="field" placeholder="Ваш e-mail" type="email" name="subscribe-email" id="subscribe-email" required>
+          <button class="button button-subscribe" type="submit">Подписаться</button>
         </form>
       </section>
     </main>
 
     <footer class="page-footer">
-      <section class="footer-contacts">
-        <h2 class="visually-hidden">Контакты</h2>
-
-        <div class="footer-contacts-social">
-          <ul class="social-list">
-            <li class="social-item">
-              <a class="social-item" href="https://vk.com/htmlacademy"><img src="" alt="Vkontakte"></a>
-            </li>
-            <li class="social-item">
-              <a class="social-item" href="https://t.me/htmlacademy"><img src="" alt="Telegram"></a>
-            </li>
-            <li class="social-item">
-              <a class="social-item" href="https://www.youtube.com/user/htmlacademyru"><img src="" alt="Youtube"></a>
-            </li>
-          </ul>
-        </div>
-        <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-        <a class="footer-contacts-logo" href="https://htmlacademy.ru/">
+      <h2 class="visually-hidden">Контакты</h2>
+      <div class="page-footer-social">
+        <ul class="social-list">
+          <li class="social-item">
+            <a class="social-link" href="https://vk.com/htmlacademy"><img src="" alt="Vkontakte"></a>
+          </li>
+          <li class="social-item">
+            <a class="social-link" href="https://t.me/htmlacademy"><img src="" alt="Telegram"></a>
+          </li>
+          <li class="social-item">
+            <a class="social-link" href="https://www.youtube.com/user/htmlacademyru"><img src="" alt="Youtube"></a>
+          </li>
+        </ul>
+      </div>
+      <div class="page-footer-phone">
+        <a class="page-footer-phone-link" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      </div>
+      <div class="page-footer-logo">
+        <a class="page-footer-logo-link" href="https://htmlacademy.ru/">
           <img src="#" alt="Логотип .html academy">
         </a>
-      </section>
-
-    </footer>
-
+      </div>
+  </footer>
 
 
   </body>
