--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-    <header class="page-header">
+    <header data-test="header" class="page-header">
       <nav class="navigation">
-        <a class="navigation-logo" href="index.html">
+        <a class="navigation-logo" href="index.html" aria-current="page">
           <img class="page-header-logo" alt="Логотип Седона" src="#">
         </a>
         <ul class="navigation-list">
@@ -37,20 +39,21 @@
             </a>
           </li>
           <li class="navigation-item">
-            <button type="button">Кнопка</button>
+            <a class="navigation-link button" href="#">
+              Хочу сюда!
+            </a>
           </li>
         </ul>
       </nav>
     </header>
 
-    <main class="main-index">
-
-      <section class="hero">
+    <main data-test="main" class="main-index">
+      <section data-test="hero" class="hero">
         <h1 class="visually-hidden">Городок Седона</h1>
         <img class="city-name" src="#" alt="Welcom to the gargeaus Sedona. Because the Grand Canyon sucks">
       </section>
 
-      <section class="advantages">
+      <section data-test="advantages" class="advantages">
         <div class="advantages-header">
           <h2 class="advantages-title">Седона — небольшой городок в Аризоне,
             заслуживающий большего!</h2>
@@ -60,8 +63,6 @@
           <li class="advantages-item">
             <h3 class="advantages-title">Настоящий городок</h3>
             <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-          </li>
-          <li class="advantages-item">
             <img src="#" alt="Вид на зелёный дом или кафе с красной крышей в Седоне">
           </li>
           <li class="advantages-item">
@@ -78,8 +79,6 @@
           </li>
           <li class="advantages-item">
             <img src="#" alt="Гранд Каньон">
-          </li>
-          <li class="advantages-item">
             <h3 class="advantages-title">Там есть мост дьявола</h3>
             <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </li>
@@ -91,7 +90,6 @@
           <h2 class="service-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
           <p class="service-description">Опытный персонал и качественное обслуживание!</p>
         </div>
-
         <ul class="service-list">
           <li class="service-item">
             <h3 class="service-title">Жильё</h3>
@@ -109,46 +107,46 @@
         </ul>
       </section>
 
-      <section class="search">
+      <section data-test="search" class="search">
         <h2 class="search-title">Заинтересовались?</h2>
         <p class="search-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="search-button" href="catalog.html">ПОИСК ГОСТИНИЦЫ В седоне</a>
+        <a class="button button-search" href="catalog.html">ПОИСК ГОСТИНИЦЫ В седоне</a>
       </section>
 
-      <section class="newsletter">
-        <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
-        <p class="search-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
-          <label for="newsletter-email"></label>
-          <input class="field"  placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email" required>
-          <button class="button newsletter-button" type="submit">Подписаться</button>
+      <section data-test="subscribe" class="subscribe">
+        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+        <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+          <label for="subscribe-email"></label>
+          <input class="field" placeholder="Ваш e-mail" type="email" name="subscribe-email" id="subscribe-email" required>
+          <button class="button button-subscribe" type="submit">Подписаться</button>
         </form>
       </section>
     </main>
 
-    <footer class="page-footer">
-      <section class="footer-contacts">
+    <footer data-test="footer" class="page-footer">
         <h2 class="visually-hidden">Контакты</h2>
-
-        <div class="footer-contacts-social">
+        <div class="page-footer-social">
           <ul class="social-list">
             <li class="social-item">
-              <a class="social-item" href="https://vk.com/htmlacademy"><img src="" alt="Vkontakte"></a>
+              <a class="social-link" href="https://vk.com/htmlacademy"><img src="" alt="Vkontakte"></a>
             </li>
             <li class="social-item">
-              <a class="social-item" href="https://t.me/htmlacademy"><img src="" alt="Telegram"></a>
+              <a class="social-link" href="https://t.me/htmlacademy"><img src="" alt="Telegram"></a>
             </li>
             <li class="social-item">
-              <a class="social-item" href="https://www.youtube.com/user/htmlacademyru"><img src="" alt="Youtube"></a>
+              <a class="social-link" href="https://www.youtube.com/user/htmlacademyru"><img src="" alt="Youtube"></a>
             </li>
           </ul>
         </div>
-        <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-        <a class="footer-contacts-logo" href="https://htmlacademy.ru/">
-          <img src="#" alt="Логотип .html academy">
-        </a>
-      </section>
-
+        <div class="page-footer-phone">
+          <a class="page-footer-phone-link" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        </div>
+        <div class="page-footer-logo">
+          <a class="page-footer-logo-link" href="https://htmlacademy.ru/">
+            <img src="#" alt="Логотип .html academy">
+          </a>
+        </div>
     </footer>
 
   </body>
