--- a/index.html
+++ b/index.html
@@ -11,33 +11,33 @@
     <div class="page-container">
       <header data-test="header" class="page-header">
         <nav class="navigation">
-          <a class="navigation-logo" href="index.html" aria-current="p">
-            <img class="page-header-logo" src="images/logo.svg" width="140" height="70" alt="Логотип Седона.">
-          </a>
-          <ul class="list navigation-list">
-            <li class="navigation-item">
-              <a class="navigation-link" href="index.html" >Главная</a>
-            </li>
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">О Седоне</a>
-            </li>
-            <li class="navigation-item">
-              <a class="navigation-link" href="catalog.html">Гостиницы</a>
-            </li>
-          </ul>
+          <div>
+            <a class="navigation-logo" href="index.html" aria-current="p">
+              <img class="page-header-logo" src="images/logo.svg" width="140" height="70" alt="Логотип Седона.">
+            </a>
+            <ul class="list navigation-list">
+              <li class="navigation-item">
+                <a class="navigation-link" href="index.html" >Главная</a>
+              </li>
+              <li class="navigation-item">
+                <a class="navigation-link" href="#">О Седоне</a>
+              </li>
+              <li class="navigation-item">
+                <a class="navigation-link" href="catalog.html">Гостиницы</a>
+              </li>
+            </ul>
+          </div>
           <ul class="list navigation-list navigation-user">
             <li class="navigation-item">
               <a class="navigation-link" href="#">
-                <span class="visually-hidden">
-                  Поиск
-                </span>
+                <span class="visually-hidden">Поиск</span>
+                <img src="images/search.svg" width="18" height="18" alt="Поиск">
               </a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="#">
-                <span class="visually-hidden">
-                  Избранное
-                </span>
+                <span class="visually-hidden">Избранное</span>
+                <img src="images/heart.svg" width="18" height="18" alt="Поиск">
               </a>
             </li>
             <li class="navigation-item">
