--- a/catalog.html
+++ b/catalog.html
@@ -11,35 +11,39 @@
     <div class="page-container">
       <header data-test="header" class="page-header">
         <nav class="navigation">
-          <a class="navigation-logo" href="index.html" aria-current="p">
-            <img class="page-header-logo" src="images/logo.svg" width="140" height="70" alt="Логотип Седона.">
-          </a>
-          <ul class="list navigation-list">
-            <li class="navigation-item">
-              <a class="navigation-link" href="index.html" >Главная</a>
-            </li>
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">О Седоне</a>
-            </li>
-            <li class="navigation-item">
-              <a class="navigation-link" href="catalog.html">Гостиницы</a>
-            </li>
-          </ul>
+          <div class="navigation-menu">
+            <a class="navigation-logo" href="index.html" aria-current="p">
+              <img class="page-header-logo" src="images/logo.svg" width="140" height="70" alt="Логотип Седона.">
+            </a>
+            <ul class="list navigation-list">
+              <li class="navigation-item">
+                <a class="navigation-link" href="index.html" >Главная</a>
+              </li>
+              <li class="navigation-item">
+                <a class="navigation-link" href="#">О Седоне</a>
+              </li>
+              <li class="navigation-item">
+                <a class="navigation-link" href="catalog.html">Гостиницы</a>
+              </li>
+            </ul>
+          </div>
           <ul class="list navigation-list navigation-user">
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">
-                <span class="visually-hidden">
-                  Поиск
-                </span>
-              </a>
-            </li>
-            <li class="navigation-item">
-              <a class="navigation-link" href="#">
-                <span class="visually-hidden">
-                  Избранное
-                </span>
-              </a>
-            </li>
+            <div class="navigation-choice">
+              <li class="navigation-item">
+                <a class="navigation-link" href="#">
+                  <span class="visually-hidden">Поиск</span>
+                  <img src="images/search.svg" width="18" height="18" alt="Поиск">
+                </a>
+              </li>
+              <li class="navigation-item">
+                <a class="navigation-link heart" href="#">
+                  <span class="visually-hidden">Избранное</span>
+                  <img src="images/heart.svg" width="18" height="18" alt="Поиск">
+                  <span class="heart-quantity">12</span>
+                </a>
+              </li>
+            </div>
+
             <li class="navigation-item">
               <a class="navigation-link button" href="#">
                 Хочу сюда!
@@ -69,81 +73,98 @@
           </ul>
 
           <form class="filter-catalog" action="#" method="get">
-            <fieldset class="filter-item filter-infrastructure">
-              <legend class="filter-heading filter-infrastructure-title">Инфраструктура:</legend>
-              <ul class="filter-infrastructure-list list control-list">
-                <li class="control-item">
-                  <input class="control-input" id="pool" name="pool" value="pool" type="checkbox" checked>
-                  <label class="control-label" for="pool">Бассейн</label>
-                </li>
-                <li class="control-item">
-                  <input class="control-input" id="parking" name="parking" value="parking" type="checkbox" checked>
-                  <label class="control-label" for="parking">Парковка</label>
-                </li>
-                <li class="control-item">
-                  <input class="control-input" id="wi-fi" name="wi-fi" value="wi-fi" type="checkbox">
-                  <label class="control-label" for="wi-fi">Wi-Fi</label>
-                </li>
-              </ul>
-            </fieldset>
+            <div class="filter-left">
+              <fieldset class="filter-item filter-infrastructure">
+                <legend class="filter-heading filter-infrastructure-title">Инфраструктура:</legend>
+                <ul class="filter-infrastructure-list list control-list">
+                  <li class="control-item">
+                    <input class="control-input" id="pool" name="pool" value="pool" type="checkbox" checked>
+                    <label class="control-label" for="pool">Бассейн</label>
+                  </li>
+                  <li class="control-item">
+                    <input class="control-input" id="parking" name="parking" value="parking" type="checkbox" checked>
+                    <label class="control-label" for="parking">Парковка</label>
+                  </li>
+                  <li class="control-item">
+                    <input class="control-input" id="wi-fi" name="wi-fi" value="wi-fi" type="checkbox">
+                    <label class="control-label" for="wi-fi">Wi-Fi</label>
+                  </li>
+                </ul>
+              </fieldset>
 
-            <fieldset class="filter-item filter-housing">
-              <legend class="filter-heading filter-housing-title">Тип жилья:</legend>
-              <ul class="filter-housing-list list control-list">
-                <li class="control-item">
-                  <input class="control-input" id="hotel" name="hotel-group" type="radio" value="hotel" checked>
-                  <label class="control-label" for="hotel">Гостиница</label>
-                </li>
-                <li class="control-item">
-                  <input class="control-input" id="motel" name="hotel-group" type="radio" value="motel">
-                  <label class="control-label" for="motel">Мотель</label>
-                </li>
-                <li class="control-item">
-                  <input class="control-input" id="apartments" name="hotel-group" type="radio" value="apartments">
-                  <label class="control-label" for="apartments">Апартаменты</label>
-                </li>
-              </ul>
-            </fieldset>
+              <fieldset class="filter-item filter-housing">
+                <legend class="filter-heading filter-housing-title">Тип жилья:</legend>
+                <ul class="filter-housing-list list control-list">
+                  <li class="control-item">
+                    <input class="control-input" id="hotel" name="hotel-group" type="radio" value="hotel" checked>
+                    <label class="control-label" for="hotel">Гостиница</label>
+                  </li>
+                  <li class="control-item">
+                    <input class="control-input" id="motel" name="hotel-group" type="radio" value="motel">
+                    <label class="control-label" for="motel">Мотель</label>
+                  </li>
+                  <li class="control-item">
+                    <input class="control-input" id="apartments" name="hotel-group" type="radio" value="apartments">
+                    <label class="control-label" for="apartments">Апартаменты</label>
+                  </li>
+                </ul>
+              </fieldset>
+            </div>
 
-            <fieldset class="filter-item filter-cost">
-              <legend class="filter-heading filter-cost-title">Стоимость, ₽:</legend>
-              <label>
-                <span class="limit-cost">от</span>
-                <input class="cost-text" type="text" value="0">
-              </label>
-              <label>
-                <span class="limit-cost">до</span>
-                <input class="cost-text" type="text" value="9000">
-              </label>
-              <div class="slider">
-                <input type="range" min="0" max="10000" value="10000">
+            <div class="filter-right">
+              <fieldset class="filter-item filter-cost">
+                <legend class="filter-heading filter-cost-title">Стоимость, ₽:</legend>
+                <div class="cost">
+                  <label>
+                    <span class="limit-cost">от</span>
+                    <input class="cost-text" type="text" value="0">
+                  </label>
+                  <label>
+                    <span class="limit-cost">до</span>
+                    <input class="cost-text cost-text-before" type="text" value="9000">
+                  </label>
+                </div>
+
+                <div class="slider">
+                  <input type="range" min="0" max="10000" value="10000">
+                </div>
+              </fieldset>
+              <div class="filter-button">
+                <button class="button button-submit" type="submit">Применить</button>
+                <button class="button button-reset" type="reset">Сбросить</button>
               </div>
-            </fieldset>
 
-            <button class="button button-submit" type="submit">Применить</button>
-            <button class="button button-reset" type="reset">Сбросить</button>
+            </div>
           </form>
         </section>
 
 
         <section data-test="catalog" class="catalog">
-          <h2 class="catalog-title">Найдено гостиниц: <span>38</span></h2>
+          <div class="catalog-header">
+            <h2 class="catalog-title">Найдено гостиниц: <span>38</span></h2>
+            <div class="catalog-sorting">
+              <select class="catalog-select" aria-label="Сортировка">
+                <option value="cheap">Сначала дешёвое</option>
+                <option value="expensive">Сначала дорогое</option>
+                <option value="popular">Сначала популярное</option>
+              </select>
 
-          <select class="catalog-select" aria-label="Сортировка">
-            <option value="cheap">Сначала дешёвое</option>
-            <option value="expensive">Сначала дорогое</option>
-            <option value="popular">Сначала популярное</option>
-          </select>
-
-          <a class="button-catalog-card" href="#">
-            <span class="visually-hidden">Показать карточки</span>
-          </a>
-          <a href="#" class="button-catalog-slide">
-            <span class="visually-hidden">Показать слайдом</span>
-          </a>
-          <a href="#" class="button-catalog-list">
-            <span class="visually-hidden">Показать список</span>
-          </a>
+              <div class="catalog-mode">
+                <a class="button-catalog button-catalog-card" href="#">
+                  <span class="visually-hidden">Показать карточки</span>
+                  <img src="images/mode-1.svg" width="16" height="14" alt="Показать карточки">
+                </a>
+                <a href="#" class="button-catalog button-catalog-slide">
+                  <span class="visually-hidden">Показать слайдом</span>
+                  <img src="images/mode-2.svg" width="16" height="14" alt="Показать слайдом">
+                </a>
+                <a href="#" class="button-catalog button-catalog-list">
+                  <span class="visually-hidden">Показать список</span>
+                  <img src="images/mode-3.svg" width="16" height="14" alt="Показать список">
+                </a>
+              </div>
+            </div>
+          </div>
 
           <ul class="list catalog-list">
             <li class="catalog-card">
@@ -151,14 +172,20 @@
                 <img class="catalog-card-image" src="images/hotel-1.jpg" width="300" height="212" alt="Amara Resort & Spa">
                 <h3 class="catalog-card-title">Amara Resort & Spa</h3>
               </a>
-              <p class="catalog-card-room">Гостиница</p>
-              <b class="catalog-card-price">От 4000 ₽</b>
-              <a class="button-card-detail button" href="#">Подробнее</a>
-              <a class="button-card-favourit button" href="#">В избранное</a>
-              <p class="start start-4">
-                <span class="visually-hidden">Четырёхзвёздочный отель</span>
-              </p>
-              <p class="catalog-rating">Рейтинг: 8,5</p>
+              <div class="catalog-card-cost">
+                <p class="catalog-card-room">Гостиница</p>
+                <b class="catalog-card-price">От 4000 ₽</b>
+              </div>
+              <div class="catalog-card-button">
+                <a class="button-card-detail button" href="#">Подробнее</a>
+                <a class="button-card-favourit button" href="#">В избранное</a>
+              </div>
+              <div class="catalog-card-estimation" >
+                <p class="start start-4">
+                  <span class="visually-hidden">Четырёхзвёздочный отель</span>
+                </p>
+                <p class="catalog-rating">Рейтинг: 8,5</p>
+              </div>
             </li>
 
             <li class="catalog-card">
@@ -166,14 +193,20 @@
                 <img class="catalog-card-image" src="images/hotel-2.jpg" width="300" height="212" alt="Villas at Poco Diablo">
                 <h3 class="catalog-card-title">Villas at Poco Diablo</h3>
               </a>
-              <p class="catalog-card-room">Гостиница</p>
-              <b class="catalog-card-price">От 5000 ₽</b>
-              <a class="button-card-detail button" href="#">Подробнее</a>
-              <a class="button-card-favourit button" href="#">В избранное</a>
-              <p class="start start-4">
-                <span class="visually-hidden">Четырёхзвёздочный отель</span>
-              </p>
-              <p class="catalog-rating">Рейтинг: 9,2</p>
+              <div class="catalog-card-cost">
+                <p class="catalog-card-room">Гостиница</p>
+                <b class="catalog-card-price">От 5000 ₽</b>
+              </div>
+              <div class="catalog-card-button">
+                <a class="button-card-detail button" href="#">Подробнее</a>
+                <a class="button-card-favourit button-card-added button" href="#">В избранном</a>
+              </div>
+              <div class="catalog-card-estimation">
+                <p class="start start-4">
+                  <span class="visually-hidden">Четырёхзвёздочный отель</span>
+                </p>
+                <p class="catalog-rating">Рейтинг: 9,2</p>
+              </div>
             </li>
 
             <li class="catalog-card">
@@ -181,14 +214,20 @@
                 <img class="catalog-card-image" src="images/hotel-3.jpg" width="300" height="212" alt="Desert Quail Inn">
                 <h3 class="catalog-card-title">Desert Quail Inn</h3>
               </a>
-              <p class="catalog-card-room">Гостиница</p>
-              <b class="catalog-card-price">От 2500 ₽</b>
-              <a class="button-card-detail button" href="#">Подробнее</a>
-              <a class="button-card-favourit button" href="#">В избранное</a>
-              <p class="start start-3">
-                <span class="visually-hidden">Трёхзвёздочный отель</span>
-              </p>
-              <p class="catalog-rating">Рейтинг: 6,9</p>
+              <div class="catalog-card-cost">
+                <p class="catalog-card-room">Гостиница</p>
+                <b class="catalog-card-price">От 2500 ₽</b>
+              </div>
+              <div class="catalog-card-button">
+                <a class="button-card-detail button" href="#">Подробнее</a>
+                <a class="button-card-favourit button" href="#">В избранное</a>
+              </div>
+              <div class="catalog-card-estimation">
+                <p class="start start-3">
+                  <span class="visually-hidden">Трёхзвёздочный отель</span>
+                </p>
+                <p class="catalog-rating">Рейтинг: 6,9</p>
+              </div>
             </li>
 
             <li class="catalog-card">
@@ -196,14 +235,20 @@
                 <img class="catalog-card-image" src="images/hotel-4.jpg" width="300" height="212" alt="GreenTree Inn">
                 <h3 class="catalog-card-title">GreenTree Inn</h3>
               </a>
-              <p class="catalog-card-room">Гостиница</p>
-              <b class="catalog-card-price">От 1500 ₽</b>
-              <a class="button-card-detail button" href="#">Подробнее</a>
-              <a class="button-card-favourit button" href="#">В избранное</a>
-              <p class="start start-2">
-                <span class="visually-hidden">Двухзвёздочный отель</span>
-              </p>
-              <p class="catalog-rating">Рейтинг: 5,0</p>
+              <div class="catalog-card-cost">
+                <p class="catalog-card-room">Гостиница</p>
+                <b class="catalog-card-price">От 1500 ₽</b>
+              </div>
+              <div class="catalog-card-button">
+                <a class="button-card-detail button" href="#">Подробнее</a>
+                <a class="button-card-favourit button" href="#">В избранное</a>
+              </div>
+              <div class="catalog-card-estimation">
+                <p class="start start-2">
+                  <span class="visually-hidden">Двухзвёздочный отель</span>
+                </p>
+                <p class="catalog-rating">Рейтинг: 5,0</p>
+              </div>
             </li>
           </ul>
 
@@ -220,8 +265,8 @@
             <li class="pagination-item">
               <a class="pagination-link" href="#">4</a>
             </li>
-            <li class="pagination-item">
-              <a class="pagination-link" href="#">...</a>
+            <li class="pagination-item pagination-item-points">
+              <a class="pagination-link pagination-link-points" href="#">...</a>
             </li>
             <li class="pagination-item">
               <a class="pagination-link" href="#">10</a>
