Добавляет сетку на гридах для каталога гостиниц

--- a/catalog.html
+++ b/catalog.html
@@ -154,11 +154,11 @@
                   <span class="visually-hidden">Показать карточки</span>
                   <img src="images/mode-1.svg" width="16" height="14" alt="Показать карточки">
                 </a>
-                <a href="#" class="button-catalog button-catalog-slide">
+                <a class="button-catalog button-catalog-slide" href="#">
                   <span class="visually-hidden">Показать слайдом</span>
                   <img src="images/mode-2.svg" width="16" height="14" alt="Показать слайдом">
                 </a>
-                <a href="#" class="button-catalog button-catalog-list">
+                <a class="button-catalog button-catalog-list" href="#">
                   <span class="visually-hidden">Показать список</span>
                   <img src="images/mode-3.svg" width="16" height="14" alt="Показать список">
                 </a>
