Добавляет data атрибуты

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           </ul>
         </section>
 
-        <section class="service">
+        <section data-test="service" class="service">
           <div class="service-header">
             <h2 class="title service-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
             <p class="description service-description">Опытный персонал и качественное обслуживание!</p>
