Исправляет имя класса на  main-modal

--- a/modal.html
+++ b/modal.html
@@ -53,7 +53,7 @@
         </nav>
       </header>
 
-      <main data-test="main" class="main-container main-index">
+      <main data-test="main" class="main-container main-modal">
         <div data-test="modal" class="modal-container">
           <div class="modal">
             <div class="modal-wrapper">
