Исправляет логотип и декоративную графику, указывает тип кнопки

--- a/catalog.html
+++ b/catalog.html
@@ -33,15 +33,13 @@
           <div class="navigation-wrapper">
             <ul class="list navigation-list navigation-user">
               <li class="navigation-item">
-                <a class="navigation-link" href="#">
+                <a class="navigation-link navigation-search" href="#">
                   <span class="visually-hidden">Поиск</span>
-                  <img src="images/search.svg" width="18" height="18" alt="Поиск.">
                 </a>
               </li>
               <li class="navigation-item">
-                <a class="navigation-link heart" href="#">
+                <a class="navigation-link navigation-heart" href="#">
                   <span class="visually-hidden">Избранное</span>
-                  <img src="images/heart.svg" width="18" height="18" alt="Избранное.">
                   <span class="heart-quantity">12</span>
                 </a>
               </li>
@@ -146,15 +144,12 @@
               <div class="catalog-mode">
                 <a class="button-catalog button-catalog-card" href="#">
                   <span class="visually-hidden">Показать карточки</span>
-                  <img src="images/mode-1.svg" width="16" height="14" alt="Показать карточки.">
                 </a>
                 <a class="button-catalog button-catalog-slide" href="#">
                   <span class="visually-hidden">Показать слайдом</span>
-                  <img src="images/mode-2.svg" width="16" height="14" alt="Показать слайдом.">
                 </a>
                 <a class="button-catalog button-catalog-list" href="#">
                   <span class="visually-hidden">Показать список</span>
-                  <img src="images/mode-3.svg" width="16" height="14" alt="Показать список.">
                 </a>
               </div>
             </div>
