--- a/index.html
+++ b/index.html
@@ -33,15 +33,13 @@
           <div class="navigation-wrapper">
             <ul class="list navigation-list navigation-user">
               <li class="navigation-item">
-                <a class="navigation-link" href="#">
+                <a class="navigation-link navigation-search" href="#">
                   <span class="visually-hidden">Поиск</span>
-                  <img src="images/search.svg" width="18" height="18" alt="Поиск">
                 </a>
               </li>
               <li class="navigation-item">
-                <a class="navigation-link heart" href="#">
+                <a class="navigation-link navigation-heart" href="#">
                   <span class="visually-hidden">Избранное</span>
-                  <img src="images/heart.svg" width="18" height="18" alt="Избранное">
                   <span class="heart-quantity">12</span>
                 </a>
               </li>
@@ -176,7 +174,7 @@
       <div data-test="modal" class="modal-container">
         <div class="modal">
           <div class="modal-wrapper">
-            <button class="modal-close-button">
+            <button class="modal-close-button" type="button">
               <span class="visually-hidden">Закрыть</span>
             </button>
               <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
